--- a/src/styles.css
+++ b/src/styles.css
@@ -19,3 +19,13 @@ ul {
     width: 300px;
     height: 300px;
 }
+
+.container {
+    width: 50px;
+    height: 50px;
+    background-color: palevioletred;
+}
+
+.form {
+    margin-bottom: 5px;
+}
