--- a/src/styles.css
+++ b/src/styles.css
@@ -41,3 +41,19 @@ ul {
 .js-favorite-active {
     color: gold;
 }
+
+.list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    list-style: none;
+    padding: 10px;
+    margin: 0;
+}
+
+.item {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid grey;
+    padding: 10px;
+}
