--- a/src/styles.css
+++ b/src/styles.css
@@ -61,3 +61,38 @@ ul {
     border: 1px solid grey;
     padding: 10px;
 }
+
+
+/* модальне вікно */
+
+/* .backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(218, 211, 211, 0.408);
+}
+
+.modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 200px;
+    height: 200px;
+    background-color: white;
+}
+
+.btn {
+    position: absolute;
+    top: 15px;
+    right: 15px;
+}
+
+.backdrop.is-hidden {
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+} */
+/* ___________________________________________________________________________________ */
